@@ -1,5 +1,7 @@
 2010-10-14  6.6.5-1 Cristy  <quetzlzacatenango@image...>
   * Ignore PS bounding box offsets if -page is set.
+  * Associate a resize filter for each of the horizontal and vertical passes
+    when resizing.
 
 2010-10-12  6.6.5-0 Anthony Thyssen <A.Thyssen@griffith...>
   * Added "filter:sigma" expert setting defining the 'sigma' for the Gaussian
